<resources>
    <string name="app_name">Cycle Rental</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="email">Email</string>
    <string name="password1">Password</string>
    <string name="string_password1" />
    <string name="username1">Username</string>
    <string name="Password">Password</string>
    <string name="name">Name</string>
    <string name="username2">Username</string>
    <string name="textview">TextView</string>
    <string name="next">next</string>
    <string name="select_the_number_of_hours_you_want_cycle_for">Select the number of hours you want cycle for</string>
    <string name="Next">Next</string>
    <string name="description">Description</string>
    <string name="Name">Name</string>
    <string name="rent">Rent</string>
    <string name="textviewname">TextView</string>
    <string name="textviewdesc">TextView</string>
    <string name="textviewrent">TextView</string>
    <string name="book">BOOK</string>
    <string name="go_back">GO BACK</string>
    <string name="title_activity_hours2">Hours2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cycle_booked">CYCLE BOOKED</string>
</resources>
